[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/avatar.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.29675, 18.174 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -10 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.53393 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RayOnSlope" type="RayCast2D" parent="."]
position = Vector2( 7.30197, 22.2672 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2 )

[node name="RayOnSlopeL" type="RayCast2D" parent="."]
position = Vector2( -7.302, 22.267 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2 )

[node name="RayOnEchelleBot" type="RayCast2D" parent="."]
position = Vector2( 7.30197, 20.1209 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayOnEchelleBotL" type="RayCast2D" parent="."]
position = Vector2( -7.302, 20.1209 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayOnEchelleTop" type="RayCast2D" parent="."]
position = Vector2( 7.30197, 2.91947 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayOnEchelleTopL" type="RayCast2D" parent="."]
position = Vector2( -7.302, 2.91947 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2
